--- a/force-app/main/default/lwc/experiencePageComponent/experiencePageComponent.html
+++ b/force-app/main/default/lwc/experiencePageComponent/experiencePageComponent.html
@@ -4,7 +4,13 @@
 </div>
 <div if:true={experienceData}>
     <template for:each={experienceData} for:item="exp">
+        <p key={exp.experience.Type__c}>{exp.experience.Type__c}</p>
+
         <p key={exp.experience.Id}>{exp.experience.Name}</p>
+        <p key={exp.experience.Sub_Title__c}>{exp.experience.Sub_Title__c}</p>
+
+        <p key={exp.experience.Experience_Start_Date__c}>{exp.experience.Experience_Start_Date__c}</p>
+      
         <img key={exp.experience.Id} src={exp.base64Data} alt={exp.experience.Name} />
     </template>
 </div>
