updated the code

--- a/force-app/main/default/lwc/learningCSSandHTM/learningCSSandHTM.html
+++ b/force-app/main/default/lwc/learningCSSandHTM/learningCSSandHTM.html
@@ -1,5 +1,8 @@
 <template>
 <div class="myClass1">
    hello I am Learning Css
+   <div class="myClass2">
+      Second Div is here
+   </div>
 </div>
 </template>
