--- a/force-app/main/default/lwc/loginPage/loginPage.html
+++ b/force-app/main/default/lwc/loginPage/loginPage.html
@@ -49,7 +49,7 @@
 
                             <li>Forgot your password?</li>
 
-                            <li class="listAlign inline-hover"><a href="/landingpage">Reset Password</a></li>
+                            <li class="listAlign inline-hover"><a href="/ExperienceCloud/s/landingpage">Reset Password</a></li>
 
                         </ul>
 
