--- a/force-app/main/default/lwc/day1CodingChallengelwc/day1CodingChallengelwc.html
+++ b/force-app/main/default/lwc/day1CodingChallengelwc/day1CodingChallengelwc.html
@@ -1,5 +1,24 @@
 <template>
   
+    <div>
     the current record is {currentRecordId}
     the close date value is {closeDate}
+    <lightning-button variant="base" label="Fetch the Field value of specific record" title="Looks like a link" onclick={handleClick} class="slds-m-left_x-small"></lightning-button>
+    </div>
+     <div>
+        <lightning-card title="Create Record">
+            <lightning-input type="text" label="Id of Account" value={accountId} disabled></lightning-input>
+            <lightning-input type="text" label="Enter Name " onchange={handleName}></lightning-input>
+            <lightning-input type="text" label="Enter Phone Number " onchange={handlePhone}></lightning-input>
+            <lightning-button variant="base" label="Create a Account Record" title="Create a Account Record" onclick={handleClickAccount} class="slds-m-left_x-small"></lightning-button>
+
+        </lightning-card>
+     </div>
+
+     <div>
+        <lightning-card title="Update Record">
+            <lightning-input type="text" label="Enter some text"></lightning-input>
+
+        </lightning-card>
+     </div>
 </template>
